; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_mbuf.c_mcl_audit_mbuf.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_mbuf.c_mcl_audit_mbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i64, i32* }
%struct.mbuf = type { i32 }
%struct.TYPE_9__ = type { %struct.TYPE_9__* }

@AUDIT_CONTENTS_SIZE = common dso_local global i64 0, align 8
@mclverify = common dso_local global i64 0, align 8
@MCACHE_FREE_PATTERN = common dso_local global i32 0, align 4
@MC_MBUF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_10__*, i8*, i32, i32)* @mcl_audit_mbuf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mcl_audit_mbuf(%struct.TYPE_10__* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.mbuf*, align 8
  %10 = alloca %struct.TYPE_9__*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = bitcast i8* %11 to %struct.mbuf*
  store %struct.mbuf* %12, %struct.mbuf** %9, align 8
  %13 = load %struct.mbuf*, %struct.mbuf** %9, align 8
  %14 = bitcast %struct.mbuf* %13 to %struct.TYPE_9__*
  %15 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_9__*, %struct.TYPE_9__** %15, align 8
  store %struct.TYPE_9__* %16, %struct.TYPE_9__** %10, align 8
  %17 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %17, i32 0, i32 1
  %19 = load i32*, i32** %18, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %27

21:                                               ; preds = %4
  %22 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @AUDIT_CONTENTS_SIZE, align 8
  %26 = icmp eq i64 %24, %25
  br label %27

27:                                               ; preds = %21, %4
  %28 = phi i1 [ false, %4 ], [ %26, %21 ]
  %29 = zext i1 %28 to i32
  %30 = call i32 @VERIFY(i32 %29)
  %31 = load i64, i64* @mclverify, align 8
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %37

33:                                               ; preds = %27
  %34 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %35 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %36 = call i32 @mcl_audit_verify_nextptr(%struct.TYPE_9__* %34, %struct.TYPE_10__* %35)
  br label %37

37:                                               ; preds = %33, %27
  %38 = load i32, i32* %8, align 4
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %57, label %40

40:                                               ; preds = %37
  %41 = load %struct.mbuf*, %struct.mbuf** %9, align 8
  %42 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %43 = call i32 @mcl_audit_save_mbuf(%struct.mbuf* %41, %struct.TYPE_10__* %42)
  %44 = load i64, i64* @mclverify, align 8
  %45 = icmp ne i64 %44, 0
  br i1 %45, label %46, label %52

46:                                               ; preds = %40
  %47 = load i32, i32* @MCACHE_FREE_PATTERN, align 4
  %48 = load %struct.mbuf*, %struct.mbuf** %9, align 8
  %49 = load i32, i32* @MC_MBUF, align 4
  %50 = call i32 @m_maxsize(i32 %49)
  %51 = call i32 @mcache_set_pattern(i32 %47, %struct.mbuf* %48, i32 %50)
  br label %52

52:                                               ; preds = %46, %40
  %53 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %54 = load %struct.mbuf*, %struct.mbuf** %9, align 8
  %55 = bitcast %struct.mbuf* %54 to %struct.TYPE_9__*
  %56 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %55, i32 0, i32 0
  store %struct.TYPE_9__* %53, %struct.TYPE_9__** %56, align 8
  br label %71

57:                                               ; preds = %37
  %58 = load i64, i64* @mclverify, align 8
  %59 = icmp ne i64 %58, 0
  br i1 %59, label %60, label %66

60:                                               ; preds = %57
  %61 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %62 = load i8*, i8** %6, align 8
  %63 = load i32, i32* @MC_MBUF, align 4
  %64 = call i32 @m_maxsize(i32 %63)
  %65 = call i32 @mcache_audit_free_verify_set(%struct.TYPE_10__* %61, i8* %62, i32 0, i32 %64)
  br label %66

66:                                               ; preds = %60, %57
  %67 = load %struct.mbuf*, %struct.mbuf** %9, align 8
  %68 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %69 = load i32, i32* %7, align 4
  %70 = call i32 @mcl_audit_restore_mbuf(%struct.mbuf* %67, %struct.TYPE_10__* %68, i32 %69)
  br label %71

71:                                               ; preds = %66, %52
  ret void
}

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i32 @mcl_audit_verify_nextptr(%struct.TYPE_9__*, %struct.TYPE_10__*) #1

declare dso_local i32 @mcl_audit_save_mbuf(%struct.mbuf*, %struct.TYPE_10__*) #1

declare dso_local i32 @mcache_set_pattern(i32, %struct.mbuf*, i32) #1

declare dso_local i32 @m_maxsize(i32) #1

declare dso_local i32 @mcache_audit_free_verify_set(%struct.TYPE_10__*, i8*, i32, i32) #1

declare dso_local i32 @mcl_audit_restore_mbuf(%struct.mbuf*, %struct.TYPE_10__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
